Add gamification features, skill drills, and Google OAuth integration
- Implement achievement tracking and user progress system
- Add specialized communication skill drills (filler elimination, precision under pressure, stronger conclusions)
- Set up Google OAuth authentication
- Update dashboard with data integration
- Remove deprecated improvement-hub and speech-analysis pages
- Add Vercel deployment configuration

--- a/public/business-finance-communication.html
+++ b/public/business-finance-communication.html
@@ -482,7 +482,7 @@
         </div>
         <div class="footer-section">
           <h3>Analysis Tools</h3>
-          <a href="speech-analysis.html">Speech Analysis</a>
+          <a href="analysis.html">Speech Analysis</a>
           <a href="presentation-analysis.html">Presentation Skills</a>
           <a href="conflict-resolution-analysis.html">Conflict Resolution</a>
         </div>
