--- a/public/analysis-results.html
+++ b/public/analysis-results.html
@@ -33,8 +33,8 @@
          ========================================================================== */
       :root {
         /* Communication Color Palette - Professional & Versatile */
-        --voice-primary: #6366f1;
-        --voice-secondary: #8b5cf6;
+        --voice-primary: #3b82f6;
+        --voice-secondary: #1d4ed8;
         --voice-accent: #06b6d4;
         --voice-warm: #f59e0b;
         --voice-success: #10b981;
@@ -1184,7 +1184,6 @@
           <a href="dashboard.html" class="nav-link">Home</a>
           <a href="professional-communication.html" class="nav-link">Professional Communication</a>
           <a href="personal-communication.html" class="nav-link">Personal Communication</a>
-          <a href="improvement-hub.html" class="nav-link">Improvement Hub</a>
           <a href="pricing.html" class="nav-link">Pricing</a>
         </div>
       </div>
@@ -1359,22 +1358,6 @@
                        gap: 0.5rem;">
                 <i data-lucide="eye" style="width: 18px; height: 18px;"></i>
                 View Improvement Plans
-              </button>
-              <button onclick="window.location.href='improvement-hub.html'" 
-                style="background: white; 
-                       color: var(--voice-primary); 
-                       border: 2px solid var(--voice-primary); 
-                       padding: 1rem 2rem; 
-                       border-radius: 12px; 
-                       font-weight: 600; 
-                       font-size: 1rem; 
-                       cursor: pointer; 
-                       transition: all 0.3s ease;
-                       display: flex;
-                       align-items: center;
-                       gap: 0.5rem;">
-                <i data-lucide="rocket" style="width: 18px; height: 18px;"></i>
-                Take Me to Improvement Hub
               </button>
             </div>
 
